chore: Further implementation

--- a/packages/frontend-framework/package.json
+++ b/packages/frontend-framework/package.json
@@ -36,13 +36,10 @@
   "dependencies": {
     "@iavofficial/frontend-framework-shared": "*",
     "@reduxjs/toolkit": "^2.5.1",
-    "i18next": "^22.4.13",
-    "i18next-browser-languagedetector": "^7.0.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.3",
     "react-cookie": "^7.2.1",
-    "react-i18next": "^12.2.0",
     "react-redux": "^9.2.0",
     "simplebar-react": "^3.2.3"
   },
@@ -109,10 +106,7 @@
     "./contentCell": "./dist/components/content/contentCell.js",
     "./colorProvider": "./dist/coloring/colorProvider.js",
     "./colorOptionTypes": "./dist/coloring/colorOptionTypes.js",
-    "./i18n": "./dist/components/internationalization/i18n.js",
     "./language": "./dist/contexts/language.js",
-    "./translationFunction": "./dist/types/translationFunction.js",
-    "./translators": "./dist/components/internationalization/translators.js",
     "./header": "./dist/components/header/header.js",
     "./settingsMenu": "./dist/components/header/settingsMenu.js",
     "./userMenu": "./dist/components/header/userMenu.js",
@@ -126,6 +120,11 @@
     "./hash": "./dist/re-exports/hash.js",
     "./colorSettingsContext": "./dist/re-exports/colorSettingsContext.js",
     "./moduleContext": "./dist/re-exports/moduleContext.js",
+    "./moduleHooks": "./dist/re-exports/moduleHooks.js",
+    "./defaultModules": "./dist/re-exports/defaultModules.js",
+    "./reExportedTypes": "./dist/re-exports/reExportedTypes.js",
+    "./cookieHooks": "./dist/re-exports/cookieHooks.js",
+    "./useModuleTranslation": "./dist/re-exports/useModuleTranslation.js",
     "./constants.css": "./dist/css/constants.css",
     "./mainPage.css": "./dist/css/mainPage.css",
     "./framework.css": "./dist/css/framework.css",
@@ -223,18 +222,6 @@
       "./colorOptionTypes": [
         "./dist/coloring/colorOptionTypes.d.ts"
       ],
-      "./i18n": [
-        "./dist/components/internationalization/i18n.d.ts"
-      ],
-      "./language": [
-        "./dist/contexts/language.d.ts"
-      ],
-      "./translationFunction": [
-        "./dist/types/translationFunction.d.ts"
-      ],
-      "./translators": [
-        "./dist/components/internationalization/translators.d.ts"
-      ],
       "./header": [
         "./dist/components/header/header.d.ts"
       ],
@@ -273,6 +260,21 @@
       ],
       "./moduleContext": [
         "./dist/re-exports/moduleContext.d.ts"
+      ],
+      "./moduleHooks": [
+        "./dist/re-exports/moduleHooks.d.ts"
+      ],
+      "./defaultModules": [
+        "./dist/re-exports/defaultModules.d.ts"
+      ],
+      "./reExportedTypes": [
+        "./dist/re-exports/reExportedTypes.js"
+      ],
+      "./cookieHooks": [
+        "./dist/re-exports/cookieHooks.js"
+      ],
+      "./useModuleTranslation": [
+        "./dist/re-exports/useModuleTranslation.js"
       ]
     }
   },
