chore: run format

--- a/.github/workflows/npm_run_format.yml
+++ b/.github/workflows/npm_run_format.yml
@@ -40,4 +40,5 @@ jobs:
           git add .
           git commit -m "chore(format): apply automated formatting changes"
           git fetch origin ${{ github.head_ref }}
-          git push origin HEAD:${{ github.head_ref }}
+          git pull origin ${{ github.head_ref }}
+          git push origin ${{ github.head_ref }}
