--- a/.github/workflows/npm_run_format.yml
+++ b/.github/workflows/npm_run_format.yml
@@ -39,6 +39,10 @@ jobs:
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global user.name "${GITHUB_ACTOR}"
 
+      - name: Create and Checkout Branch (if necessary)
+        run: |
+          git checkout -b ${{ github.head_ref }} || git checkout ${{ github.head_ref }}
+
       - name: Commit and Push Changes
         run: |
           git add .
