--- a/.github/workflows/npm_run_format.yml
+++ b/.github/workflows/npm_run_format.yml
@@ -23,10 +23,10 @@ jobs:
 
       - name: Run Format
         run: |
-          npm run format
           git fetch --all
-          git checkout "origin/${{ github.base_ref }}"  # Verwende den Ziel-Branch
+          git checkout ${{ github.base_ref }}
           git pull origin ${{ github.base_ref }}
+          npm run format
 
       - name: Set environment variables
         run: echo "GITHUB_ACTOR=${{ github.actor }}" >> $GITHUB_ENV
@@ -36,15 +36,12 @@ jobs:
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global user.name "${GITHUB_ACTOR}"
 
-      - name: Create and Checkout Branch (if necessary)
-        run: |
-          git checkout -b ${{ github.head_ref }} || git checkout ${{ github.head_ref }}
-
       - name: Commit and Push Changes
         run: |
-          git add . 
+          git add .
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
             git commit -m "chore(format): apply automated formatting changes"
-            git push --set-upstream origin ${{ github.base_ref }}
+            git push origin ${{ github.base_ref }}
+          fi
