feat: add dynamic legal document configuration
Introduced a new prop to configure legal document links dynamically.
Updated UI to display legal document links conditionally based on visibility settings.
Added support for rendering custom components for legal document pages.
Removed static configurations for imprint and privacy policy.
Updated route handling to dynamically register paths for legal documents.

--- a/packages/frontend-framework/package.json
+++ b/packages/frontend-framework/package.json
@@ -110,6 +110,7 @@
     "./cookieBanner": "./dist/components/cookie/cookieBanner.js",
     "./defaultContentSelectionElement": "./dist/components/content/defaultContentSelectionElement.js",
     "./imprint": "./dist/components/imprint/imprintText.js",
+    "./legalDocument": "./dist/components/imprint/legalDocument.js",
     "./privacyPolicy": "./dist/components/imprint/privacyPolicyText.js",
     "./headerPanelElement": "./dist/components/header/headerPanelElement.js",
     "./headerMenuElement": "./dist/components/header/headerMenuElement.js",
@@ -231,6 +232,9 @@
       ],
       "./imprint": [
         "./dist/components/imprint/imprintText.d.ts"
+      ],
+      "./legalDocument": [
+        "./dist/components/imprint/legalDocument.d.ts"
       ],
       "./privacyPolicy": [
         "./dist/components/imprint/privacyPolicyText.d.ts"
