--- a/packages/aws-authenticator/package.json
+++ b/packages/aws-authenticator/package.json
@@ -38,8 +38,7 @@
   "dependencies": {
     "@iavofficial/frontend-framework-shared": "*",
     "@reduxjs/toolkit": "^2.5.1",
-    "react-redux": "^9.2.0",
-    "lodash": "4.17.19"
+    "react-redux": "^9.2.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
