--- a/packages/frontend-framework/package.json
+++ b/packages/frontend-framework/package.json
@@ -41,7 +41,8 @@
     "primereact": "^10.3.3",
     "react-cookie": "^7.2.1",
     "react-redux": "^9.2.0",
-    "simplebar-react": "^3.2.3"
+    "simplebar-react": "^3.2.3",
+    "@mapbox/mapbox-sdk": "0.13.7"
   },
   "peerDependencies": {
     "react": "^18.2.0",
