--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -48,13 +48,26 @@ jobs:
       ### Step 6: Dependency License Compliance Check
       - name: Dependency License Checker
         run: |
-          # Run license-checker for dependency licenses in all workspaces
+          # Install license-checker for validating licenses
           npm install -g license-checker
 
+          DISALLOWED_LICENSES='GPL,AGPL-3.0,CC-BY-4.0'
+
+          # Loop through workspaces and check dependency licenses
           find packages -name "package.json" -not -path "*/node_modules/*" | while read packageFile; do
             packageDir=$(dirname "$packageFile")
             echo "Running license-checker for: $packageDir"
-            license-checker --production --json --out $packageDir-dependency-licenses.json --start $packageDir || exit 1
+
+            # Generate the license-checker report
+            license-checker --production --json > $packageDir-dependency-licenses.json --start $packageDir
+
+            # Check if there are any licenses in the disallowed list
+            for license in $(echo $DISALLOWED_LICENSES | sed 's/,/ /g'); do
+              if grep -q $license $packageDir-dependency-licenses.json; then
+                echo "Disallowed license detected: $license in $packageDir-dependency-licenses.json"
+                exit 1
+              fi
+            done
           done
 
           echo "All dependency licenses validated successfully."
