--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -62,10 +62,15 @@ jobs:
             # Generate the license-checker report
             license-checker --production --json > $packageDir-dependency-licenses.json --start $packageDir
 
-            # Check for disallowed licenses
+            # Output the license report for debugging
+            echo "Dependency license report for $packageDir:"
+            cat $packageDir-dependency-licenses.json
+
+            # Check if there are any disallowed licenses
             for license in $(echo $DISALLOWED_LICENSES | sed 's/,/ /g'); do
-              if grep -q "\"licenses\": \"$license\"" $packageDir-dependency-licenses.json; then
-                echo "❌ Disallowed license detected: $license in $packageDir"
+              MATCH_COUNT=$(grep -o $license $packageDir-dependency-licenses.json | wc -l)
+              if [ $MATCH_COUNT -gt 0 ]; then
+                echo "❌ Disallowed license detected: $license in $packageDir-dependency-licenses.json"
                 exit 1
               fi
             done
