--- a/packages/aws-authenticator/package.json
+++ b/packages/aws-authenticator/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "@iavofficial/frontend-framework-shared": "*",
     "@reduxjs/toolkit": "^2.5.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "@mapbox/mapbox-sdk": "0.13.7"
   },
   "peerDependencies": {
     "react": "^18.2.0",
